--- a/css/sub.scss
+++ b/css/sub.scss
@@ -247,7 +247,7 @@
 
 
 #sub_visual01{
-    background: url("/web/project/bosung/img/sub_visual01.jpg")no-repeat;
+    background: url("../img/sub_visual01.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -261,7 +261,7 @@
     }
 }
 #sub_visual02{
-    background: url("/web/project/bosung/img/sub_visual02.jpg")no-repeat;
+    background: url("../img/sub_visual02.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -276,7 +276,7 @@
 }
 
 #sub_visual03{
-    background: url("/web/project/bosung/img/sub_visual03.jpg")no-repeat;
+    background: url("../img/sub_visual03.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -290,7 +290,7 @@
     }
 }
 #sub_visual04{
-    background: url("/web/project/bosung/img/sub_visual04.jpg")no-repeat;
+    background: url("../img/sub_visual04.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -305,7 +305,7 @@
     
 }
 #sub_visual05{
-    background: url("/web/project/bosung/img/sub_visual05.jpg")no-repeat;
+    background: url("../img/sub_visual05.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -320,7 +320,7 @@
     
 }
 #sub_visual06{
-    background: url("/web/project/bosung/img/sub_visual06.jpg")no-repeat;
+    background: url("../img/sub_visual06.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -335,7 +335,7 @@
     
 }
 #sub_visual07{
-    background: url("/web/project/bosung/img/sub_visual07.jpg")no-repeat;
+    background: url("../img/sub_visual07.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -350,7 +350,7 @@
     
 }
 #sub_visual08{
-    background: url("/web/project/bosung/img/new_banner_01.jpg")no-repeat;
+    background: url("../img/new_banner_01.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -366,7 +366,7 @@
 }
 
 #sub_visual09{
-    background: url("/web/project/bosung/img/sub_visual09.jpg")no-repeat;
+    background: url("../img/sub_visual09.jpg")no-repeat;
     width: 100%;
     height: 658px;
     background-size: cover;
@@ -691,7 +691,7 @@
         }
         &:after{
             content:"";
-            background: url("/web/project/bosung/img/philosophy_bg.jpg")no-repeat;
+            background: url("../img/philosophy_bg.jpg")no-repeat;
             width: 100%;
             height: 428px;
             background-size: cover;
@@ -713,13 +713,7 @@
             flex-wrap: wrap;
             li{
                 display: table;
-                // background: rgba(37,93,132,.1);
-                // padding: 60px;
-                // border: 2px dashed #255D84;
-                // -webkit-border-radius: 100%;
-                // -moz-border-radius: 100%;
-                // border-radius: 100%!important;
-                // -khtml-border-radius: 100%;  
+
                
                 &.d02{
                     margin-left: -4%;
@@ -733,14 +727,7 @@
                
              
                 .i_box{
-                    // width: 260px;
-                    // height: 260px;
-                    // margin: 0 auto;
-                    // text-align: center;
-                    // background: #fff;
-                    // border-radius: 150px;
-                    // display: table-cell;
-                    // vertical-align: middle;
+
                     background: rgba(37,93,132,.1);
                     border: 2px dashed #255D84;
                     -webkit-border-radius: 100%;
@@ -869,7 +856,7 @@
 }
 
 #history_bg_box{
-    background: url("/web/project/bosung/img/history_bg.png")no-repeat;
+    background: url("../img/history_bg.png")no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
