--- a/css/sub.css
+++ b/css/sub.css
@@ -216,7 +216,7 @@
 }
 
 #sub_visual01 {
-  background: url("/web/project/bosung/img/sub_visual01.jpg") no-repeat;
+  background: url("../img/sub_visual01.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -231,7 +231,7 @@
 }
 
 #sub_visual02 {
-  background: url("/web/project/bosung/img/sub_visual02.jpg") no-repeat;
+  background: url("../img/sub_visual02.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -246,7 +246,7 @@
 }
 
 #sub_visual03 {
-  background: url("/web/project/bosung/img/sub_visual03.jpg") no-repeat;
+  background: url("../img/sub_visual03.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -261,7 +261,7 @@
 }
 
 #sub_visual04 {
-  background: url("/web/project/bosung/img/sub_visual04.jpg") no-repeat;
+  background: url("../img/sub_visual04.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -276,7 +276,7 @@
 }
 
 #sub_visual05 {
-  background: url("/web/project/bosung/img/sub_visual05.jpg") no-repeat;
+  background: url("../img/sub_visual05.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -291,7 +291,7 @@
 }
 
 #sub_visual06 {
-  background: url("/web/project/bosung/img/sub_visual06.jpg") no-repeat;
+  background: url("../img/sub_visual06.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -306,7 +306,7 @@
 }
 
 #sub_visual07 {
-  background: url("/web/project/bosung/img/sub_visual07.jpg") no-repeat;
+  background: url("../img/sub_visual07.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -321,7 +321,7 @@
 }
 
 #sub_visual08 {
-  background: url("/web/project/bosung/img/new_banner_01.jpg") no-repeat;
+  background: url("../img/new_banner_01.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -336,7 +336,7 @@
 }
 
 #sub_visual09 {
-  background: url("/web/project/bosung/img/sub_visual09.jpg") no-repeat;
+  background: url("../img/sub_visual09.jpg") no-repeat;
   width: 100%;
   height: 658px;
   background-size: cover;
@@ -514,7 +514,7 @@
 }
 #philosophy .bg:after {
   content: "";
-  background: url("/web/project/bosung/img/philosophy_bg.jpg") no-repeat;
+  background: url("../img/philosophy_bg.jpg") no-repeat;
   width: 100%;
   height: 428px;
   background-size: cover;
@@ -657,7 +657,7 @@
 }
 
 #history_bg_box {
-  background: url("/web/project/bosung/img/history_bg.png") no-repeat;
+  background: url("../img/history_bg.png") no-repeat;
   background-size: cover;
   background-position: center;
   width: 100%;
