--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@
 
 #deps01{
     .main_visual{
-        background: url("/web/project/bosung/img/main_visual.jpg")no-repeat;
+        background: url("../img/main_visual.jpg")no-repeat;
         width: 100%;
         height: 100vh;
         background-size: cover;
