--- a/css/main_common.css
+++ b/css/main_common.css
@@ -145,7 +145,7 @@ body.on {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: .15rem;
   background-color: #fff;
   border-radius: 4px;
 }
