--- a/css/main_common.scss
+++ b/css/main_common.scss
@@ -152,7 +152,7 @@ body{
             position: absolute;
             left: 0;
             width: 100%;
-            height: 2px;
+            height: .15rem;
             background-color: #fff;
             border-radius: 4px;
         }
